# docker-workshop

./: README.md
.github/workflows/: django.yml
compose/: Dockerfile  docker-compose.override.yml  docker-compose.yml
compose-multiple/: .dockerignore  Dockerfile  Dockerfile.devel  Dockerfile.front  Makefile  default.conf  docker-compose.devel.yml  docker-compose.front.yml  docker-compose.tests.yml  docker-compose.yml  start-django-dev.sh  start-django-uvicorn.sh  start-tests.sh
compose-multiple/exam/: debug.py  pyproject.toml  settings.py  urls.py
compose-multiple/exam/exam/quiz/tests/: test_quiz.py
compose/exam/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
compose/exam/exam/quiz/: apps.py  views.py
dependencies/: Dockerfile  hello.py
entrypoint-vs-cmd/: Dockerfile
ephemeral/: Dockerfile  data.py
minimal/: Dockerfile
multistage/: Dockerfile
network/: Dockerfile  Dockerfile.expose  Dockerfile.localhost
