[tool.poetry]
name = "exam"
version = "0.1.0"
description = ""
authors = ["Eugene Morozov <jmv@emorozov.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
ipython = "^7.28.0"
django-extensions = "^3.1.3"
psycopg2 = {extras = ["binary"], version = "^2.9.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
